# event-agent

./: .dockerignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
src/eventagent/: __init__.py  __main__.py  cli.py  config.py  consumer.py  correlation.py  models.py  publisher.py  storage.py  store.py
src/eventagent/services/: __init__.py  demo_runner.py  order_service.py  payment_service.py
tests/: __init__.py  test_config.py  test_consumer.py  test_correlation.py  test_demo_runner.py  test_models.py  test_workflow_queries.py
