[project]
name = "eventagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Smit Bafna", email = "bafnasmit@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "nats-py>=2.15.0",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.27.0",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
